--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -43,11 +43,16 @@ blockquote:after {
 }
 
 .myfooter {
-  position: absolute;
-  right: 0;
+  position: fixed;
+  clear:both;
+  width: 100%;
   bottom: 0;
   left: 0;
   padding: 1rem;
   background-color: #efefef;
   text-align: center;
+}
+
+html {
+  height: 100%;
 }
